--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,7 +13,7 @@
           data-amount="7500"
           data-name="Custom Ice Rod"
           data-description="Custom Rods created by Chris Stanton"
-          data-image="/img/symbol.png"
+          data-image="./images/symbol.png"
           data-locale="auto">
         </script>
         <script>
@@ -25,7 +25,7 @@
       </form>
     </div>
     <div class="col-md-6">
-      <img src="/img/elDente.png" alt="" class="img-fluid">
+      <img src="./images/elDente.png" alt="" class="img-fluid">
     </div>
   </div>
 </section>
