--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
     <div class="col-md-6 text-center">
       <h1 class="display-3 mt-3 pt-5"> Custom Ice Rods </h1>
       <p class="lead"> Buy the best of the best in ice fishing rod technology </p>
-      <!-- submits request to server -->
+      <!-- post request to server -->
       <form action="/charge" method="POST">
         <!-- script handle descriptions and sets price for server -->
         <script
@@ -16,16 +16,16 @@
           data-image="./images/symbol.png"
           data-locale="auto">
         </script>
-        <script>
+        <!-- <script>
           // hide default purchase button
           document.getElementsByClassName('stripe-button-el')[0].style.display = 'none';
-        </script>
+        </script> -->
         <!-- new purchase button -->
-        <button type="submit" class="btn btn-outline-dark btn-lg"> Purchase For $75 </button>
+        <!-- <button type="submit" class="btn btn-outline-dark btn-lg"> Purchase For $75 </button> -->
       </form>
     </div>
     <div class="col-md-6">
-      <img src="./images/elDente.png" alt="" class="img-fluid">
+      <img src="./images/elDente.png" class="img-fluid">
     </div>
   </div>
 </section>
